Add some methods to API for ABBYY OCR
